Ajustes hechos en base a retroalimentación